tests/fail/BasicForLoop.java
package fail;

import java.lang.System;

public class BasicForLoop {
    public static void main(String[] args) {
	for ( i=0 ; 10 > i; i=1) {
	    i;
	}
    }
}
